# superdoc

./: .gitignore  main.py  pyproject.toml
scripts/: fine_tune_funsd.py  pretrain_superdoc.py
superdoc/: __init__.py  configuration_layoutlmv3.py  configuration_superdoc.py  image_processing_layoutlmv3.py  image_processing_layoutlmv3_fast.py  image_processing_superdoc.py  image_processing_superdoc_fast.py  modeling_layoutlmv3.py  modeling_superdoc.py  muon.py  processing_layoutlmv3.py  processing_superdoc.py  synthetic_generator.py  tokenization_layoutlmv3.py  tokenization_superdoc.py  triton_flash_attn.py
