[project]
name = "superdoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=9.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.0.0",
    "evaluate>=0.4.0",
    "seqeval>=1.2.0",
    "wandb>=0.15.0",
    "safetensors>=0.4.0",
    "python-Levenshtein>=0.21.0",
    "accelerate>=1.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["superdoc*"]
exclude = ["scripts*", "source_documents*"]
